@@ -20,24 +20,23 @@
 package org.elasticsearch.gradle;
 
 import org.gradle.api.Buildable;
-import org.gradle.api.Project;
 import org.gradle.api.artifacts.Configuration;
+import org.gradle.api.model.ObjectFactory;
 import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.TaskDependency;
 
 import java.io.File;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 public class Jdk implements Buildable, Iterable<File> {
 
     private static final List<String> ALLOWED_VENDORS = List.of("adoptopenjdk", "openjdk");
-    static final Pattern VERSION_PATTERN =
-        Pattern.compile("(\\d+)(\\.\\d+\\.\\d+)?\\+(\\d+(?:\\.\\d+)?)(@([a-f0-9]{32}))?");
-    private static final List<String> ALLOWED_PLATFORMS = Collections.unmodifiableList(Arrays.asList("darwin", "linux", "windows", "mac"));
+    private static final List<String> ALLOWED_PLATFORMS = List.of("darwin", "linux", "windows", "mac");
+    private static final Pattern VERSION_PATTERN = Pattern.compile("(\\d+)(\\.\\d+\\.\\d+)?\\+(\\d+(?:\\.\\d+)?)(@([a-f0-9]{32}))?");
+    private static final Pattern LEGACY_VERSION_PATTERN = Pattern.compile("(\\d)(u\\d+)\\+(b\\d+?)(@([a-f0-9]{32}))?");
 
     private final String name;
     private final Configuration configuration;
@@ -45,13 +44,17 @@ public class Jdk implements Buildable, Iterable<File> {
     private final Property<String> vendor;
     private final Property<String> version;
     private final Property<String> platform;
+    private String baseVersion;
+    private String major;
+    private String build;
+    private String hash;
 
-    Jdk(String name, Project project) {
+    Jdk(String name, Configuration configuration, ObjectFactory objectFactory) {
         this.name = name;
-        this.configuration = project.getConfigurations().create("jdk_" + name);
-        this.vendor = project.getObjects().property(String.class);
-        this.version = project.getObjects().property(String.class);
-        this.platform = project.getObjects().property(String.class);
+        this.configuration = configuration;
+        this.vendor = objectFactory.property(String.class);
+        this.version = objectFactory.property(String.class);
+        this.platform = objectFactory.property(String.class);
     }
 
     public String getName() {
@@ -74,9 +77,10 @@ public class Jdk implements Buildable, Iterable<File> {
     }
 
     public void setVersion(String version) {
-        if (VERSION_PATTERN.matcher(version).matches() == false) {
+        if (VERSION_PATTERN.matcher(version).matches() == false && LEGACY_VERSION_PATTERN.matcher(version).matches() == false) {
             throw new IllegalArgumentException("malformed version [" + version + "] for jdk [" + name + "]");
         }
+        parseVersion(version);
         this.version.set(version);
     }
 
@@ -87,18 +91,34 @@ public class Jdk implements Buildable, Iterable<File> {
     public void setPlatform(String platform) {
         if (ALLOWED_PLATFORMS.contains(platform) == false) {
             throw new IllegalArgumentException(
-                "unknown platform [" + platform + "] for jdk [" + name + "], must be one of " + ALLOWED_PLATFORMS);
+                "unknown platform [" + platform + "] for jdk [" + name + "], must be one of " + ALLOWED_PLATFORMS
+            );
         }
         this.platform.set(platform);
     }
 
-    // pkg private, for internal use
-    Configuration getConfiguration() {
-        return configuration;
+    public String getBaseVersion() {
+        return baseVersion;
+    }
+
+    public String getMajor() {
+        return major;
+    }
+
+    public String getBuild() {
+        return build;
+    }
+
+    public String getHash() {
+        return hash;
     }
 
     public String getPath() {
         return configuration.getSingleFile().toString();
+    }
+
+    public String getConfigurationName() {
+        return configuration.getName();
     }
 
     @Override
@@ -135,12 +155,31 @@ public class Jdk implements Buildable, Iterable<File> {
         }
         version.finalizeValue();
         platform.finalizeValue();
-        vendor.finalizeValue();;
+        vendor.finalizeValue();
     }
 
     @Override
     public Iterator<File> iterator() {
         return configuration.iterator();
+    }
+
+    private void parseVersion(String version) {
+        // decompose the bundled jdk version, broken into elements as: [feature, interim, update, build]
+        // Note the "patch" version is not yet handled here, as it has not yet been used by java.
+        Matcher jdkVersionMatcher = VERSION_PATTERN.matcher(version);
+        if (jdkVersionMatcher.matches() == false) {
+            // Try again with the pre-Java9 version format
+            jdkVersionMatcher = LEGACY_VERSION_PATTERN.matcher(version);
+
+            if (jdkVersionMatcher.matches() == false) {
+                throw new IllegalArgumentException("Malformed jdk version [" + version + "]");
+            }
+        }
+
+        baseVersion = jdkVersionMatcher.group(1) + (jdkVersionMatcher.group(2) != null ? (jdkVersionMatcher.group(2)) : "");
+        major = jdkVersionMatcher.group(1);
+        build = jdkVersionMatcher.group(3);
+        hash = jdkVersionMatcher.group(5);
     }
 
 }
